--- a/style.css
+++ b/style.css
@@ -89,3 +89,22 @@ input[type="text"], input[type="password"]{
   margin-top: 10%;
   width: 100px;
 }
+
+#info img{
+  width: 40px;
+  height: auto;
+}
+
+#profile{
+  background-color:#D05525;
+  border-radius: 7px;
+  margin: 10px;
+  padding: 30px 20px;
+  display: inline-block;
+  width: 50%;
+}
+#profile-picture{
+  width: 150px;
+  height: auto;
+  border-radius: 100px;
+}
